@@ -51,6 +51,9 @@ Format:
 * what is entry type 0x000b ?
 * why does Windows hide the last 4096 bytes of the volume?
 
+20150204
+* added correction for volume size being 1 sector short
+
 20150124
 * applied updates
 
